--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
         <p>Professional, Modern, Fast, and User-friendly websites for businesses of all sizes.</p>
         <button class="btn">Contact Now</button>
     </div>
-        <img src="images/undraw_building-a-website_1wrp.svg" alt="">
+        <img src="undraw_building-a-website_1wrp.svg" alt="">
     </div>
     </div>
 </section>
 <div class="about">
-    <div id="how-we-work"><img src="images/undraw_designer_efwz.svg" alt=""><h1>How We Work</h1></div>
+    <div id="how-we-work"><img src="undraw_designer_efwz.svg" alt=""><h1>How We Work</h1></div>
 <div class="about-section">
     <div class="about-line">
     <h1>Building Websites That Work for You</h1>
     <p>At Web World, we design websites that are easy to navigate, reliable, and built to grow with your business</p>
 </div>
-<img src="images/undraw_building-websites_k2zp.svg" alt="">
+<img src="undraw_building-websites_k2zp.svg" alt="">
 </div>
 <div class="about-section">
-    <img src="images/undraw_career-progress_vfq5.svg" alt="">
+    <img src="undraw_career-progress_vfq5.svg" alt="">
     <div class="about-line">
         <h1>Your Vision, Our Expertise</h1>
         <p>We listen to your needs and turn your ideas into a professional website that captures your brand's essence</p>
@@ -51,7 +51,7 @@
             <h1>Crafting Seamless Digital Experiences</h1>
             <p>Web World creates user-friendly, responsive websites that ensure your visitors have the best experience every time</p>
         </div>
-        <img src="images/undraw_digital-nomad_xr4z.svg" alt="">
+        <img src="undraw_digital-nomad_xr4z.svg" alt="">
         </div>
 </div>
 <div class="why">
@@ -90,7 +90,7 @@
    
 </div>
 <div class="contact-us">
-    <div id="connect-with"><img src="images/undraw_personal-email_hfut.svg" alt=""><h1>Connect With Us</h1></div>
+    <div id="connect-with"><img src="undraw_personal-email_hfut.svg" alt=""><h1>Connect With Us</h1></div>
 <div class="contact">
 <div class="contact-details">
     <div class="brand">
