--- a/index.html
+++ b/index.html
@@ -55,34 +55,34 @@
         </div>
 </div>
 <div class="why">
-    <div id="our-expertice"><img src="images/undraw_design-tools_owgm.svg" alt=""><h1>Our Expertise</h1></div>
+    <div id="our-expertice"><img src="undraw_design-tools_owgm.svg" alt=""><h1>Our Expertise</h1></div>
     <div class="why-line">
     <div class="why-box">
-        <img src="images/undraw_maker-launch_fwzi.svg" alt="">
+        <img src="undraw_maker-launch_fwzi.svg" alt="">
     </div>
     <h1>Fast and Secure Websites</h1>
 </div>
 <div class="why-line">
     <div class="why-box">
-        <img src="images/undraw_career-progress_vfq5.svg" alt="">
+        <img src="undraw_career-progress_vfq5.svg" alt="">
     </div>
     <h1>Solutions for Business Growth</h1>
 </div>
 <div class="why-line">
     <div class="why-box">
-        <img src="images/undraw_add-user_rbko.svg" alt="">
+        <img src="undraw_add-user_rbko.svg" alt="">
     </div>
     <h1>User-Centric Approach</h1>
 </div>
 <div class="why-line">
     <div class="why-box">
-        <img src="images/undraw_web-devices_i15y.svg" alt="">
+        <img src="undraw_web-devices_i15y.svg" alt="">
     </div>
     <h1>Expertise in Responsive Design</h1>
 </div>
 <div class="why-line">
     <div class="why-box">
-        <img src="images/undraw_active-support_v6g0.svg" alt="">
+        <img src="undraw_active-support_v6g0.svg" alt="">
     </div>
     <h1>End-to-End Support</h1>
 </div>
